feat: created the routes services and controller for getting product by slug
